# JSON-C-Tools

./: .gitignore  CMakeLists.txt  GRAMMAR.md  README.md
include/: json.h
src/: cursor.c  cursor.h  globals.h  json.c  table.c  table.h  tokenizer.c  tokenizer.h
test/: cursor_test.c  json_test.c  run_test.bat  test.json  tokenizer_test.c
